Update and add members

--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,12 @@ plugins:
   - jekyll-sitemap
   - jemoji
 
+
+# Collections
+collections:
+  members:
+    output: true
+
 # See https://jekyllrb.com/docs/pagination/
 # For pagination to work, you cannot have index.md at the root of your repo, instead you must rename this file to index.html
 paginate: 15
